# TETRA

./: .gitignore  LICENSE  Manner - Aggressiveness Detector.ipynb  Manner - Perspective AI.ipynb  Perspective Tutorial.ipynb  README.md  Trust - QualityMannerRelation.ipynb  Trust Library.ipynb  databricks_dolly_open_questions.csv  get_quantity.py  get_quantity_optimized.py  pyproject.toml  quantity_maxim.ipynb  quantity_maxim.py  trust_main.py  wrong_quantity_maxim.py
.github/workflows/: release.yml  tests.yml
example_notebook/: tetra_notebook.ipynb
tests/: test_trust_main.py
tetra/: trust_main.py
