[tool.poetry]
name = "tetra"
version = "0.1.0"
description = "TETRA: TExtual TRust Analyzer"
authors = ["Simona Mazzarino <https://github.com/simonamazzarino>", "Federico Mazzoni <https://github.com/FedericoMz>"]
license = "\"GPL\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.130.0"
presidio-analyzer = "^2.2.354"
presidio-anonymizer = "^2.2.354"
nltk = "^3.8.1"
sentence-transformers = "^2.7.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.1"
pytest = "^7.2.1"
flake8 = "^6.0.0"
flake8-import-order = "^0.18.2"
flake8-black = "^0.3.6"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
